--- a/src/MainMenu/SelectGrid/styles.module.css
+++ b/src/MainMenu/SelectGrid/styles.module.css
@@ -16,3 +16,18 @@
     grid-column: 1/3;
 }
 
+.button{
+    cursor: pointer;
+    width: 100%;
+    height: 52px;
+    border-radius: 26px;
+    color: #FCFCFC;
+    text-align: center;
+    font-family: var(--font);
+    font-size: 1.625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    background-color: #BCCED9;
+}
+
