--- a/src/Game/styles.module.css
+++ b/src/Game/styles.module.css
@@ -1,6 +1,9 @@
 .container{
     width: 1110px;
     height: 687px;
+    display: flex;
+    flex-direction: column;
+    gap: 85px;
     position: absolute;
     inset: 0;
     margin: auto;
