--- a/src/MainMenu/SelectTheme/styles.module.css
+++ b/src/MainMenu/SelectTheme/styles.module.css
@@ -15,17 +15,19 @@
     grid-column: 1/3;
 }
 
-.button{
-    cursor: pointer;
-    width: 100%;
-    height: 52px;
-    border-radius: 26px;
-    color: #FCFCFC;
-    text-align: center;
-    font-family: var(--font);
-    font-size: 1.625rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    background-color: #BCCED9;
+@media(max-width: 720px){
+    .theme{
+        grid-template-columns: repeat(2, 1fr)
+    }
+}
+
+@media(max-width: 600px){
+    .menu_title{
+        font-size: 0.9375rem;
+    }
+
+    .theme{
+        column-gap: 11px;
+        row-gap: 11px;
+    }
 }
