--- a/src/Game/Grid/Tile/styles.module.css
+++ b/src/Game/Grid/Tile/styles.module.css
@@ -1,6 +1,4 @@
 .tile{
-    width: 82px;
-    height: 82px;
     border-radius: 100%;
     cursor: pointer;
     display: flex;
@@ -26,14 +24,13 @@
 }
 
 .tile_image{
-    width: 40px;
     object-fit: contain;
     transform: scale(0);
 }
 
 .tile_number{
+    text-align: center;
     font-family: var(--font);
-    font-size: 2.75rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
