--- a/src/Game/Grid/Tile/styles.module.css
+++ b/src/Game/Grid/Tile/styles.module.css
@@ -1,6 +1,6 @@
 .tile{
-    width: 82px;
-    height: 82px;
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
     cursor: pointer;
     display: flex;
@@ -11,7 +11,6 @@
     background-color: #304859;
     color: #FCFCFC;
 }
-
 
 .clicked{
     background-color: #BCCED9;
@@ -25,20 +24,3 @@
     background-color: #6395B8;
 }
 
-.tile_image{
-    object-fit: contain;
-    transform: scale(0);
-}
-
-.tile_number{
-    text-align: center;
-    font-family: var(--font);
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    transform: scale(0);
-}
-
-.visible {
-    transform: scale(1);
-}
