--- a/src/Game/NavBar/MobileMenu/styles.module.css
+++ b/src/Game/NavBar/MobileMenu/styles.module.css
@@ -19,12 +19,13 @@
     width: 100%;
     height: 100vh;
     position: fixed;
-    left: 0;
+    left: -30px;
     right: 0;
-    bottom: 0;
-    top: 0;
+    top: 0px;
     background-color: transparent;
+    z-index: var(--closest);
 }
+
 .dialog{
     transform: scale(0);
     position: absolute;
