--- a/src/Game/NavBar/styles.module.css
+++ b/src/Game/NavBar/styles.module.css
@@ -28,6 +28,12 @@
     transition: none;
 }
 
+.restart:disabled{
+    background-color: grey;
+    pointer-events: none;
+    color: rgb(66, 65, 65);
+}
+
 .game{
     height: 52px;
     border-radius: 26px;
