--- a/src/Game/NavBar/MobileMenu/styles.module.css
+++ b/src/Game/NavBar/MobileMenu/styles.module.css
@@ -19,9 +19,10 @@
     width: 100%;
     height: 100vh;
     position: fixed;
-    left: -30px;
+    left: 0;
     right: 0;
     top: 0px;
+    margin: auto;
     background-color: transparent;
     z-index: var(--closest);
 }
