--- a/src/Game/styles.module.css
+++ b/src/Game/styles.module.css
@@ -4,10 +4,9 @@
     flex-direction: column;
     gap: 85px;
     position: absolute;
-    top: 85px;
-    left: 50%;
-    transform: translateX(-50%);
+    inset: 0;
     margin: auto;
+    padding-top: 67px;
 }
 
 @media(max-width: 1170px){
@@ -19,14 +18,14 @@
 
 @media(max-width: 850px){
     .container{
-        top: 38px;
+        padding-top: 37px;
         gap: 121px;
     }
 }
 
 @media(max-width: 650px){
     .container{
-        top: 29px;
+        padding-top: 24px;
         gap: 85px;
     }
 }
