--- a/src/Game/DisplayWinnerDialog/styles.module.css
+++ b/src/Game/DisplayWinnerDialog/styles.module.css
@@ -7,11 +7,11 @@
     left: 0;
     right: 0;
     margin: auto;
-    background-color: transparent; /*rgba(0, 0, 0, 0.5);*/
+    background-color: transparent;
 }
 
 .dialog{
-    transform: scale(0);
+    display: block;
     width: 654px;
     padding: 51px 56px;
     border-radius: 20px;
@@ -19,7 +19,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: scale(0) translate(-50%, -50%);
+    transform-origin: center;
     display: flex;
     flex-direction: column;
     align-items: center;
