--- a/src/Game/DisplayWinnerDialog/YouWonDialog/styles.module.css
+++ b/src/Game/DisplayWinnerDialog/YouWonDialog/styles.module.css
@@ -1,30 +1,15 @@
-.overlay{
-    display: none;
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: transparent;
-}
-
 .dialog{
-    display: block;
     width: 654px;
     padding: 51px 56px;
     border-radius: 20px;
-    background: #F2F2F2;
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: scale(0) translate(-50%, -50%);
-    transform-origin: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
 }
 
 .title{
@@ -48,25 +33,23 @@
     margin-bottom: 24px;
 }
 
-.won, .lost{
+.results{
     width: 100%;
     height: 72px;
     border-radius: 10px;
+    background: #DFE7EC;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 32px;
 }
 
-.won{
-    background-color: #152938;
+.results:nth-of-type(2){
+    margin-bottom: 24px;
 }
 
-.lost{
-    background-color: #DFE7EC;
-}
-
-.player_title{
+.results_title{
+    color: #7191A5;
     font-family: var(--font);
     font-size: 1.125rem;
     font-style: normal;
@@ -74,16 +57,8 @@
     line-height: normal;
 }
 
-
-.won .player_title{
-    color: white;
-}
-
-.lost .player_title{
-    color: #7191A5;
-}
-
-.score{
+.results_data{
+    color: #304859;
     text-align: right;
     font-family: var(--font);
     font-size: 2rem;
@@ -92,25 +67,19 @@
     line-height: normal;
 }
 
-.won .score {
-    color: white;
-}
-
-.lost .score{
-    color: #304859;
-}
-
 .buttons{
     width: 100%;
     display: flex;
     gap: 14px;
-    margin-top: 24px;
 }
 
-.restart{
+.restart, .newGame{
     width: 264px;
     height: 52px;
     border-radius: 26px;
+}
+
+.restart{
     background-color: #FDA214;
     color: #FCFCFC;
     text-align: center;
@@ -123,9 +92,6 @@
 }
 
 .newGame{
-    width: 264px;
-    height: 52px;
-    border-radius: 26px;
     background-color: #DFE7EC;
     color: #304859;
     text-align: center;
@@ -137,81 +103,54 @@
     cursor: pointer;
 }
 
+
 @media(max-width: 750px){
     .dialog{
         width: 80%;
-    }
-    .restart, .newGame{
-        flex-shrink: 1;
     }
 }
 
 @media(max-width: 650px){
     .dialog{
         padding: 32px 24px;
-        gap: 9px;
+        gap: 8px;
     }
-
     .title{
         color: #152938;
-        text-align: center;
-        font-family: var(--font);
         font-size: 1.5rem;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
     }
 
     .desc{
         color: #7191A5;
-        text-align: center;
-        font-family: var(--font);
         font-size: 0.875rem;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
         margin-bottom: 16px;
     }
 
-    .player{
-        padding: 0px 16px;
+    .results{
         height: 48px;
+        padding: 0px 16px;
     }
 
-    .player_title{
+    .results:nth-of-type(2){
+        margin-bottom: 16px;
+    }
+
+    .results_title{
         color: #7191A5;
-        font-family: var(--font);
         font-size: 0.8125rem;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
     }
-
-    .score{
+    .results_data{
         color: #304859;
-        text-align: right;
-        font-family: var(--font);
         font-size: 1.25rem;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
     }
 
     .buttons{
-        margin-top: 15px;
-        gap: 16px;
         flex-direction: column;
+        gap: 16px;
     }
-
     .restart, .newGame{
-        font-size: 1.125rem;
-        height: 48px;
         width: 100%;
-    }
-}
-
-@media(max-width: 400px){
-    .won, .lost {
-        padding: 0px 20px
+        height: 48px;
+        font-size: 1.125rem;
     }
 }
