--- a/src/MainMenu/SelectPlayers/PlayerButton/styles.module.css
+++ b/src/MainMenu/SelectPlayers/PlayerButton/styles.module.css
@@ -11,7 +11,7 @@
     font-weight: 700;
     line-height: normal;
     background-color: #BCCED9;
-    transition: background-color 0.2s linear, height 0.2s linear, font-size 0.2s linear;
+    transition: none;
 }
 
 .clicked{
